--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
                 <div class="navigation__mega-menu--item__content">
                   <h2 class="theme--text">Cloud</h2>
-                  <p class="theme--text-light">Enterprise change solutions</p>
+                  <p class="theme--text-light">Soluciones de cambio empresarial</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
