cambio en los nombres de pagos

--- a/index.html
+++ b/index.html
@@ -2247,10 +2247,10 @@
             </div>
           </div>
           <div class="mobile-navigation__main--item__body theme--text-light">
-            <div class="mobile-navigation__main--item__body--item">Pay with</div>
-            <div class="mobile-navigation__main--item__body--item">Bank Deposit</div>
+            <div class="mobile-navigation__main--item__body--item">Pagar con</div>
+            <div class="mobile-navigation__main--item__body--item">Deposito bancario</div>
             <div class="mobile-navigation__main--item__body--item">Credit/Debit Card</div>
-            <div class="mobile-navigation__main--item__body--item">Cash Balance</div>
+            <div class="mobile-navigation__main--item__body--item">Saldo en efectivo</div>
             <div class="mobile-navigation__main--item__body--item">P2P Trading</div>
           </div>
         </div>
