cambios en los estilos y textos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Blockchain Crypto Exchange, Cryptocurrency Exchange, Bitcoin Trading, Ethereum price trend, BNB, CZ, BTC price, ETH wallet registration, LTC price, Binance, Poloniex, Bittrex - Replicated by Kiisi Felix Destiny">
-    <title>Binance - Cryptocurrency Exchange for Bitcoin, Ethereum &amp; Altcoins</title>
+    <title>Binance - Intercambio de criptomonedas para bitcoin, Ethereum &amp; Altcoins</title>
     <meta name="description" content="Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume">
     <meta property="og:url" content="https://github.com/kiisi">
     <link rel="canonical" href="https://github.com/kiisi">
@@ -129,7 +129,7 @@
                 </div>
                 <div class="navigation__mega-menu--item__content">
                   <h2 class="theme--text">Exchange</h2>
-                  <p class="theme--text-light">Blockchain and crypto asset exchange</p>
+                  <p class="theme--text-light">Intercambio de Blockchain y criptoactivos</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
@@ -529,7 +529,7 @@
         <div
           class="navigation__main--item navigation__main--item--buy-crypto-hov"
         >
-          <span>Buy Crypto</span>
+          <span>Compra cripto</span>
           <svg
             xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns="http://www.w3.org/2000/svg"
@@ -588,8 +588,8 @@
                   <img src="./assets/images/svgexport-22.svg" alt="exchange" />
                 </div>
                 <div class="navigation__mega-menu--item__content">
-                  <h2 class="theme--text">Bank Deposit</h2>
-                  <p class="theme--text-light">Deposit EUR via SEPA or card</p>
+                  <h2 class="theme--text">Deposito Bancario</h2>
+                  <p class="theme--text-light">Deposite EUR mediante SEPA o targeta</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
@@ -618,8 +618,8 @@
                   <img src="./assets/images/svgexport-23.svg" alt="exchange" />
                 </div>
                 <div class="navigation__mega-menu--item__content">
-                  <h2 class="theme--text">Credit/Debit Card</h2>
-                  <p class="theme--text-light">Buy crypto via Card, Apple Pay, Google Pay</p>
+                  <h2 class="theme--text">Credito/Debito Targeta</h2>
+                  <p class="theme--text-light">Compre criptomonedas mediante tarjeta, Apple Pay, Google Pay</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
@@ -648,8 +648,8 @@
                   <img src="./assets/images/svgexport-24.svg" alt="exchange" />
                 </div>
                 <div class="navigation__mega-menu--item__content">
-                  <h2 class="theme--text">Cash Balance</h2>
-                  <p class="theme--text-light">Buy Crypto with your EUR balance</p>
+                  <h2 class="theme--text">Saldo en efectivo</h2>
+                  <p class="theme--text-light">Compre criptomonedas con su saldo en EUR</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
@@ -678,8 +678,8 @@
                   <img src="./assets/images/svgexport-25.svg" alt="exchange" />
                 </div>
                 <div class="navigation__mega-menu--item__content">
-                  <h2 class="theme--text">P2P Trading</h2>
-                  <p class="theme--text-light">Bank transfer and 100+ options</p>
+                  <h2 class="theme--text">Comercio p2p</h2>
+                  <p class="theme--text-light">Transferencia Bancaria y mas de 100 opciones</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
@@ -707,10 +707,10 @@
           </div>
         </div>
         <div class="navigation__main--item">
-          <span>Markets</span>
+          <span>Mercados</span>
         </div>
         <div class="navigation__main--item navigation__main--item--trade-hov">
-          <span>Trade</span>
+          <span>Comercio</span>
           <svg
             xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns="http://www.w3.org/2000/svg"
@@ -2512,7 +2512,7 @@
           <section class="header__main">
             <div class="header__main--content">
               <h1 class="std-title theme--text">
-                Buy, trade, and hold 350+ cryptocurrencies on Binance
+                Compre, intercambie y mantenga más de 350 criptomonedas en Binance
               </h1>
               <div class="header__main--content__trade">
                 <img src="./assets/images/svgexport-65.svg" alt="Gift" />
