Traduccion de texto

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                 </div>
                 <div class="navigation__mega-menu--item__content">
                   <h2 class="theme--text">Cash Balance</h2>
-                  <p class="theme--text-light">Buy Crypto with your EUR balance</p>
+                  <p class="theme--text-light">Compre criptomonedas con su saldo en EUR</p>
                 </div>
                 <div class="navigation__mega-menu--item__arrow">
                   <svg
